добавил себе вопросы комментарии

--- a/04-oop-basic-intro-to-dom/1-column-chart/index.html
+++ b/04-oop-basic-intro-to-dom/1-column-chart/index.html
@@ -39,10 +39,13 @@
         label: 'customers',
         value: 321
       });
-
+      // const orders = document.getElementById('#order')
+      // const sales = document.getElementById('#sales')
+      // const customers = document.getElementById('#customers')
       orders.append(ordersChart.element);
       sales.append(salesChart.element);
       customers.append(customersChart.element);
+      console.log('orders', orders)
     </script>
   </body>
 </html>
